Sweet Alert Success UI alignment Fixed. Twitter Profile navigation added.

--- a/src/app/campaigns/analytics/analytics.component.css
+++ b/src/app/campaigns/analytics/analytics.component.css
@@ -179,7 +179,7 @@ h3 {
 }
 
 .portlet.light {
-	box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.4);
+	box-shadow: 0px 0px 0 rgba(0, 0, 0, 0.4);
 }
 
 p {
