--- a/src/app/social/twitter/header/header.component.css
+++ b/src/app/social/twitter/header/header.component.css
@@ -1,22 +1,48 @@
 .header-wrapper{
-    position: relative;
-    margin: 10px 0;
+     position: relative;
+     margin: 10px 0;
 }
-.banner-image{
-    width: 100%;
-    height: 320px;
+ .profile-header-image{
+     width: 100%;
+     height: 320px;
 }
-.profile-image{
-    position: absolute;
-    bottom: 0;
-    left: 50px;
-    width: 150px;
-    height: 150px;
-    padding: 5px;
-    background: #fff;
+ .profile-header-no-image {
+     height: 170px;
+     width: 100%;
 }
-.header-line{
-     padding: 15px 0;
+ .profile-image{
+     position: absolute;
+     bottom: 0;
+     left: 50px;
+     width: 150px;
+     height: 150px;
+     padding: 5px;
+     background: #fff;
+}
+ .header-line{
      background: #fff;
      text-align: center;
+}
+ .profilenav-item {
+     display: inline-block;
+     padding: 10px;
+}
+ .profilenav-item-active, .profilenav-item:hover {
+     border-bottom: 2px solid #1B95E0;
+}
+ .profilenav-label {
+     color: #657786;
+     font-weight: bold;
+     font-size: 12px;
+     letter-spacing: .02em;
+     transition: color .15s ease-in-out;
+}
+ .profilenav-value {
+     color: #66757f;
+     font-size: 18px;
+     font-weight: bold;
+     transition: color .15s ease-in-out;
+}
+ .profilenav-label, .profilenav-value {
+     display: block;
 }
